🚀 출력물 추가 및 메일전송