@@ -27,24 +27,13 @@ public class HsioService {
     private final Ha00Mapper ha00Mapper;
     private final ObjectMapper objectMapper;
 
-    /**
-     * Map의 모든 Key를 소문자로 변환 (DB 리턴값 처리용 표준)
-     */
-    private Map<String, Object> lower(Map<String, Object> map) {
-        if (map == null) return new HashMap<>();
-        Map<String, Object> newMap = new LinkedHashMap<>();
-        for (Map.Entry<String, Object> entry : map.entrySet()) {
-            newMap.put(entry.getKey().toLowerCase(), entry.getValue());
-        }
-        return newMap;
-    }
 
     @Transactional(value = "erpTransactionManager", rollbackFor = Exception.class)
     public Map<String, Object> saveRequest(Hsio010uRequest request, String userId) throws Exception {
         Hsio010u mst = request.getMst();
         List<Map<String, Object>> res = hsioMapper.HSIO_010U_STR(mst);
         if (res == null || res.isEmpty()) throw new Exception("No response from Master procedure.");
-        Map<String, Object> mstRow = lower(res.getFirst());
+        Map<String, Object> mstRow = convertMapToLowerCase(res.getFirst());
         String reqym = nvl(mstRow.get("reqym"));
         String reqno = nvl(mstRow.get("reqno"));
 
@@ -64,7 +53,7 @@ public class HsioService {
         Hsio050u mst = request.getMst();
         List<Map<String, Object>> res = hsioMapper.HSIO_050U_STR(mst);
         if (res == null || res.isEmpty()) throw new Exception("No response from Master procedure.");
-        Map<String, Object> mstRow = lower(res.getFirst());
+        Map<String, Object> mstRow = convertMapToLowerCase(res.getFirst());
         String balym = nvl(mstRow.get("balym"));
         String balno = nvl(mstRow.get("balno"));
 
@@ -84,7 +73,7 @@ public class HsioService {
         Hsio052u mst = request.getMst();
         List<Map<String, Object>> res = hsioMapper.HSIO_052U_STR(mst);
         if (res == null || res.isEmpty()) throw new Exception("No response from Master procedure.");
-        Map<String, Object> mstRow = lower(res.getFirst());
+        Map<String, Object> mstRow = convertMapToLowerCase(res.getFirst());
         String balym = nvl(mstRow.get("balym"));
         String balno = nvl(mstRow.get("balno"));
 
@@ -104,7 +93,7 @@ public class HsioService {
         Hsio190u mst = request.getMst();
         List<Map<String, Object>> res = hsioMapper.HSIO_190U_STR(mst);
         if (res == null || res.isEmpty()) throw new Exception("No response from Master procedure.");
-        Map<String, Object> mstRow = lower(res.getFirst());
+        Map<String, Object> mstRow = convertMapToLowerCase(res.getFirst());
         String ioym = nvl(mstRow.get("ioym"));
         String iono = nvl(mstRow.get("iono"));
 
@@ -125,7 +114,7 @@ public class HsioService {
         Hsio250u mst = request.getMst();
         List<Map<String, Object>> res = hsioMapper.HSIO_250U_STR(mst);
         if (res == null || res.isEmpty()) throw new Exception("No response from Master procedure.");
-        Map<String, Object> mstRow = lower(res.getFirst());
+        Map<String, Object> mstRow = convertMapToLowerCase(res.getFirst());
         String ioym = nvl(mstRow.get("ioym"));
         String iono = nvl(mstRow.get("iono"));
 
@@ -146,7 +135,7 @@ public class HsioService {
         Hsio300u mst = request.getMst();
         List<Map<String, Object>> res = hsioMapper.HSIO_300U_STR(mst);
         if (res == null || res.isEmpty()) throw new Exception("No response from Master procedure.");
-        Map<String, Object> mstRow = lower(res.getFirst());
+        Map<String, Object> mstRow = convertMapToLowerCase(res.getFirst());
         String imym = nvl(mstRow.get("imym"));
         String imno = nvl(mstRow.get("imno"));
 
@@ -175,7 +164,7 @@ public class HsioService {
         String autoSlipYn = "N";
         List<Map<String, Object>> p1Res = ha00Mapper.HA00_010S_STR(Map.of("cmpycd", cmpycd, "gubun", "P1"));
         if (p1Res != null && !p1Res.isEmpty()) {
-            autoSlipYn = nvl(lower(p1Res.getFirst()).get("slipyn"), "N");
+            autoSlipYn = nvl(convertMapToLowerCase(p1Res.getFirst()).get("slipyn"), "N");
         }
 
         String acctymd = "Y".equals(autoSlipYn) ? slipymd : "";
@@ -200,7 +189,7 @@ public class HsioService {
                 Map<String, Object> mstMap = objectMapper.convertValue(slipMst, new TypeReference<>() {});
                 List<Map<String, Object>> mstRes = haslMapper.HASL_010U_STR(mstMap);
                 if (mstRes == null || mstRes.isEmpty()) throw new Exception("전표 마스터 생성 실패");
-                currentSlipNo = nvl(lower(mstRes.getFirst()).get("slipno"));
+                currentSlipNo = nvl(convertMapToLowerCase(mstRes.getFirst()).get("slipno"));
             }
 
             item.setActkind("U0");
@@ -215,7 +204,7 @@ public class HsioService {
 
             List<Map<String, Object>> itemRes = hsioMapper.HSIO_320U_STR(item);
             if (itemRes != null && !itemRes.isEmpty()) {
-                Map<String, Object> row = lower(itemRes.getFirst());
+                Map<String, Object> row = convertMapToLowerCase(itemRes.getFirst());
                 if ("Y".equals(nvl(row.get("erryn")))) {
                     throw new Exception(nvl(row.get("msg"), "입금 처리 중 오류"));
                 }
@@ -246,22 +235,98 @@ public class HsioService {
     @Transactional(value = "erpTransactionManager", rollbackFor = Exception.class)
     public Map<String, Object> saveSettlement(Hsio510uRequest request, String userId) throws Exception {
         Hsio510u mst = request.getMst();
+        List<Hsio510u> dtlList = request.getDtl();
+        if (mst == null) throw new Exception("Request master data is null.");
+
+        // 1. [A0] 마스터 저장 및 채번
+        mst.setActkind("A0");
+        mst.setIogbn("200");
+        mst.setUpdemp(userId);
+        
         List<Map<String, Object>> res = hsioMapper.HSIO_510U_STR(mst);
-        if (res == null || res.isEmpty()) throw new Exception("No response from Master procedure.");
-        Map<String, Object> mstRow = lower(res.getFirst());
+        if (res == null || res.isEmpty()) throw new Exception("마스터 저장 실패 (응답 없음)");
+
+        Map<String, Object> mstRow = convertMapToLowerCase(res.get(0));
         String jsanym = nvl(mstRow.get("jsanym"));
         String jsanno = nvl(mstRow.get("jsanno"));
 
-        if (request.getDtl() != null) {
-            for (Hsio511u dtl : request.getDtl()) {
+        if ("000000".equals(jsanym)) throw new Exception(nvl(jsanno, "마스터 저장 업무 오류"));
+        if (jsanym.isEmpty() || jsanno.isEmpty()) throw new Exception("정산 채번 실패");
+
+        // 2. [U0] 상세 내역 루프 저장
+        if (dtlList != null) {
+            log.info("📝 [매출정산] 상세 저장 시작 - 총 {}건", dtlList.size());
+            for (int i = 0; i < dtlList.size(); i++) {
+                Hsio510u dtl = dtlList.get(i);
                 dtl.setActkind("U0");
-                dtl.setJsanym(jsanym); dtl.setJsanno(jsanno);
                 dtl.setCmpycd(mst.getCmpycd());
+                dtl.setIogbn("200");
+                dtl.setJsanym(jsanym); 
+                dtl.setJsanno(jsanno);
                 dtl.setUpdemp(userId);
-                hsioMapper.HSIO_511U_STR(dtl);
+                
+                // 🚀 [해결] 마스터 데이터 완벽 상속 (상세 저장 시 누락 방지)
+                dtl.setCustcd(mst.getCustcd());
+                dtl.setDeptcd(mst.getDeptcd());
+                dtl.setTaxunit(mst.getTaxunit());
+                dtl.setVattype(mst.getVattype());
+                dtl.setJsanymd(nvl(mst.getJsanymd()).replace("-", ""));
+                dtl.setFromdt(nvl(mst.getFromdt()).replace("-", ""));
+                dtl.setTodt(nvl(mst.getTodt()).replace("-", ""));
+                
+                // 원본 출고 정보 보존 및 데이터 정규화
+                dtl.setIoym(nvl(dtl.getIoym()));
+                dtl.setIono(nvl(dtl.getIono()));
+                dtl.setIorowno(nvl(dtl.getIorowno()));
+                dtl.setJsanqty(nvl(dtl.getJsanqty(), "0"));
+                dtl.setJsanamt(nvl(dtl.getJsanamt(), "0"));
+                dtl.setJsanvat(nvl(dtl.getJsanvat(), "0"));
+
+                log.info("   ▶ [{}/{}] 상세 파라미터: {}", (i + 1), dtlList.size(), dtl);
+
+                List<Map<String, Object>> dtlRes = hsioMapper.HSIO_510U_STR(dtl);
+                if (dtlRes != null && !dtlRes.isEmpty()) {
+                    Map<String, Object> dtlRow = convertMapToLowerCase(dtlRes.get(0));
+                    // 🚀 [해결] 일관된 jsanym 키 기반 무결성 체크
+                    String dtlStatus = nvl(dtlRow.get("jsanym"));
+                    String dtlMsg = nvl(dtlRow.get("jsanno"));
+
+                    if ("000000".equals(dtlStatus)) {
+                        throw new Exception(dtlMsg.isEmpty() ? "상세 저장 업무 오류" : dtlMsg);
+                    }
+                }
             }
         }
+
+        // 3. [V0] 최종 세금계산서 생성 확정
+        mst.setActkind("V0");
+        mst.setJsanym(jsanym);
+        mst.setJsanno(jsanno);
+        List<Map<String, Object>> vRes = hsioMapper.HSIO_510U_STR(mst);
+        if (vRes != null && !vRes.isEmpty()) {
+            Map<String, Object> vRow = convertMapToLowerCase(vRes.get(0));
+            // 🚀 [해결] 최종 단계도 jsanym 키로 무결성 체크
+            String vStatus = nvl(vRow.get("jsanym"));
+            String vMsg = nvl(vRow.get("jsanno"));
+
+            if ("000000".equals(vStatus)) {
+                throw new Exception(vMsg.isEmpty() ? "최종 확정 업무 오류" : vMsg);
+            }
+        }
+
         return mstRow;
+    }
+
+    /**
+     * Map의 모든 Key를 소문자로 변환 (HSOD100U 표준)
+     */
+    private Map<String, Object> convertMapToLowerCase(Map<String, Object> map) {
+        if (map == null) return new HashMap<>();
+        Map<String, Object> newMap = new LinkedHashMap<>();
+        for (Map.Entry<String, Object> entry : map.entrySet()) {
+            newMap.put(entry.getKey().toLowerCase(), entry.getValue());
+        }
+        return newMap;
     }
 
     @Transactional(value = "erpTransactionManager", rollbackFor = Exception.class)
@@ -269,7 +334,7 @@ public class HsioService {
         Hsio500u mst = request.getMst();
         List<Map<String, Object>> res = hsioMapper.HSIO_500U_STR(mst);
         if (res == null || res.isEmpty()) throw new Exception("No response from Master procedure.");
-        Map<String, Object> mstRow = lower(res.getFirst());
+        Map<String, Object> mstRow = convertMapToLowerCase(res.getFirst());
         String ioym = nvl(mstRow.get("ioym"));
         String iono = nvl(mstRow.get("iono"));
 
@@ -290,7 +355,7 @@ public class HsioService {
         Hsio580u mst = request.getMst();
         List<Map<String, Object>> res = hsioMapper.HSIO_580U_STR(mst);
         if (res == null || res.isEmpty()) throw new Exception("No response from Master procedure.");
-        Map<String, Object> mstRow = lower(res.getFirst());
+        Map<String, Object> mstRow = convertMapToLowerCase(res.getFirst());
         String ioym = nvl(mstRow.get("ioym"));
         String iono = nvl(mstRow.get("iono"));
 
@@ -311,7 +376,7 @@ public class HsioService {
         Hsio720u mst = request.getMst();
         List<Map<String, Object>> res = hsioMapper.HSIO_720U_STR(mst);
         if (res == null || res.isEmpty()) throw new Exception("No response from Master procedure.");
-        Map<String, Object> mstRow = lower(res.getFirst());
+        Map<String, Object> mstRow = convertMapToLowerCase(res.getFirst());
         String ioym = nvl(mstRow.get("ioym"));
         String iono = nvl(mstRow.get("iono"));
 
@@ -331,7 +396,7 @@ public class HsioService {
         Hsio730u mst = request.getMst();
         List<Map<String, Object>> res = hsioMapper.HSIO_730U_STR(mst);
         if (res == null || res.isEmpty()) throw new Exception("No response from Master procedure.");
-        Map<String, Object> mstRow = lower(res.getFirst());
+        Map<String, Object> mstRow = convertMapToLowerCase(res.getFirst());
         String ioym = nvl(mstRow.get("ioym"));
         String iono = nvl(mstRow.get("iono"));
 
@@ -351,7 +416,7 @@ public class HsioService {
         Hsio570u mst = request.getMst();
         List<Map<String, Object>> res = hsioMapper.HSIO_570U_STR(mst);
         if (res == null || res.isEmpty()) throw new Exception("No response from Master procedure.");
-        Map<String, Object> mstRow = lower(res.getFirst());
+        Map<String, Object> mstRow = convertMapToLowerCase(res.getFirst());
         String ioym = nvl(mstRow.get("ioym"));
         String iono = nvl(mstRow.get("iono"));
 
@@ -384,7 +449,7 @@ public class HsioService {
         Hsio490u mst = request.getMst();
         List<Map<String, Object>> res = hsioMapper.HSIO_490U_STR(mst);
         if (res == null || res.isEmpty()) throw new Exception("No response from Master procedure.");
-        Map<String, Object> mstRow = lower(res.getFirst());
+        Map<String, Object> mstRow = convertMapToLowerCase(res.getFirst());
         String ioym = nvl(mstRow.get("ioym"));
         String iono = nvl(mstRow.get("iono"));
 
@@ -403,8 +468,87 @@ public class HsioService {
     @Transactional(value = "erpTransactionManager", rollbackFor = Exception.class)
     public Map<String, Object> saveHSIO600U(Map<String, Object> params) {
         List<Map<String, Object>> res = hsioMapper.HSIO_600U_STR(params);
-        if (res != null && !res.isEmpty()) return lower(res.getFirst());
+        if (res != null && !res.isEmpty()) return convertMapToLowerCase(res.getFirst());
         return Map.of("res", "OK");
+    }
+
+    @Transactional(value = "erpTransactionManager", rollbackFor = Exception.class)
+    public Map<String, Object> saveOutbound550(Hsio550uSaveRequest request, String userId) throws Exception {
+        Hsio550u mst = request.getMst();
+        List<Hsio551u> dtlList = request.getDtl();
+        
+        if (mst == null) throw new Exception("Master data is null.");
+        
+        mst.setActkind("A0");
+        mst.setUpdemp(userId);
+        mst.setIogbn("200");
+        
+        String ioymd = nvl(mst.getIoymd()).replace("-", "");
+        if (ioymd.length() > 8) ioymd = ioymd.substring(0, 8);
+        mst.setIoymd(ioymd);
+        
+        mst.setFromdt(nvl(mst.getFromdt()).replace("-", ""));
+        mst.setTodt(nvl(mst.getTodt()).replace("-", ""));
+        
+        List<Map<String, Object>> resM = hsioMapper.HSIO_550U_STR(mst);
+        if (resM == null || resM.isEmpty()) throw new Exception("출고 마스터 저장 실패 (응답 없음)");
+        
+        Map<String, Object> mstRow = convertMapToLowerCase(resM.get(0));
+        String ioym = nvl(mstRow.get("ioym"));
+        String iono = nvl(mstRow.get("iono"));
+
+        if ("000000".equals(ioym)) {
+            throw new Exception(nvl(iono, "출고 마스터 업무 오류"));
+        }
+        
+        if (ioym.isEmpty() || iono.isEmpty()) {
+            throw new Exception("출고 번호 채번 실패");
+        }
+
+        // 2. Detail Save
+        if (dtlList != null) {
+            log.info("📝 [주문출고] 상세 저장 시작 - 총 {}건", dtlList.size());
+            for (int i = 0; i < dtlList.size(); i++) {
+                Hsio551u dtl = dtlList.get(i);
+                dtl.setActkind("A0");
+                dtl.setCmpycd(mst.getCmpycd());
+                dtl.setIoym(ioym);
+                dtl.setIono(iono);
+                dtl.setIoymd(mst.getIoymd());
+                dtl.setIogbn("200");
+                dtl.setUpdemp(userId);
+                
+                // 🚀 [해결] 마스터 데이터 완벽 상속 (custcd, whcd, iotype)
+                dtl.setCustcd(mst.getCustcd());
+                dtl.setWhcd(mst.getWhcd());
+                dtl.setIotype(nvl(mst.getIotype(), "100"));
+                
+                // 데이터 정규화
+                dtl.setIoqty(nvl(dtl.getIoqty(), "0"));
+                dtl.setIoamt(nvl(dtl.getIoamt(), "0"));
+                dtl.setIovat(nvl(dtl.getIovat(), "0"));
+                
+                String balym = nvl(dtl.getBalym()).replace("-", "");
+                if (balym.length() > 6) balym = balym.substring(0, 6);
+                dtl.setBalym(balym);
+
+                log.info("   ▶ [{}/{}] 상세 파라미터: {}", (i + 1), dtlList.size(), dtl);
+                
+                List<Map<String, Object>> resD = hsioMapper.HSIO_551U_STR(dtl);
+                if (resD != null && !resD.isEmpty()) {
+                    Map<String, Object> dtlRow = convertMapToLowerCase(resD.get(0));
+                    // 🚀 [해결] 상세 저장 시에도 ioym 키로 000000 에러 체크
+                    String dtlStatus = nvl(dtlRow.get("ioym"));
+                    String dtlMsg = nvl(dtlRow.get("iono"));
+
+                    if ("000000".equals(dtlStatus)) {
+                        throw new Exception(dtlMsg.isEmpty() ? "상세 저장 업무 오류" : dtlMsg);
+                    }
+                }
+            }
+        }
+        
+        return mstRow;
     }
 
     @Transactional(value = "erpTransactionManager", rollbackFor = Exception.class)
@@ -417,7 +561,7 @@ public class HsioService {
         if (details == null || details.isEmpty()) throw new Exception("전송할 전표 상세 내역이 없습니다.");
 
         for (Map<String, Object> row : details) {
-            Map<String, Object> lowerRow = lower(row);
+            Map<String, Object> lowerRow = convertMapToLowerCase(row);
             log.info("🚀 [THEJONE 전송 대기] SLIP: {}-{}, ACCT: {}, DEAL: {}", 
                 slipymd, slipno, lowerRow.get("acctcd"), lowerRow.get("custcd"));
         }
@@ -442,12 +586,26 @@ public class HsioService {
         mParams.put("actkind", "A0"); mParams.put("updemp", userId);
         List<Map<String, Object>> resM = hsioMapper.HSIO_060U_STR(mParams);
         if (resM == null || resM.isEmpty()) throw new Exception("입고 마스터 생성 실패");
-        Map<String, Object> rowM = lower(resM.getFirst());
+        Map<String, Object> rowM = convertMapToLowerCase(resM.getFirst());
         String ioym = nvl(rowM.get("ioym"));
         String iono = nvl(rowM.get("iono"));
 
         for (Map<String, Object> item : items) {
             Map<String, Object> dParams = new HashMap<>(item);
+
+            // 🚀 발주금액/수량 비례 입고금액/부가세 계산
+            double balqty = Double.parseDouble(nvl(item.get("balqty"), "0"));
+            double balamt = Double.parseDouble(nvl(item.get("balamt"), "0"));
+            double balvat = Double.parseDouble(nvl(item.get("balvat"), "0"));
+            double ioqty = Double.parseDouble(nvl(item.get("ioqty"), "0"));
+
+            if (balqty > 0) {
+                long ioamt = Math.round((balamt / balqty) * ioqty);
+                long iovat = Math.round((balvat / balqty) * ioqty);
+                dParams.put("ioamt", ioamt);
+                dParams.put("iovat", iovat);
+            }
+
             dParams.put("actkind", "A0");
             dParams.put("cmpycd", cmpycd);
             dParams.put("iogbn", iogbn);
@@ -471,7 +629,7 @@ public class HsioService {
 
         String autoSlip = "N";
         List<Map<String, Object>> resSet = hsipMapper.HSIP_112U_STR(Map.of("cmpycd", cmpycd, "gbn", "P1")); 
-        if (resSet != null && !resSet.isEmpty()) autoSlip = nvl(lower(resSet.getFirst()).get("slipyn"), "N");
+        if (resSet != null && !resSet.isEmpty()) autoSlip = nvl(convertMapToLowerCase(resSet.getFirst()).get("slipyn"), "N");
         String acctymd = "Y".equals(autoSlip) ? slipymd : "";
 
         Map<String, Object> mParams = createParamMap();
@@ -488,7 +646,7 @@ public class HsioService {
 
         List<Map<String, Object>> resMst = haslMapper.HASL_010U_STR(mParams);
         if (resMst == null || resMst.isEmpty()) throw new Exception("전표 마스터 생성 실패");
-        String slipno = nvl(lower(resMst.getFirst()).get("slipno"));
+        String slipno = nvl(convertMapToLowerCase(resMst.getFirst()).get("slipno"));
 
         for (Map<String, Object> item : items) {
             Map<String, Object> dParams = new HashMap<>();
@@ -512,7 +670,7 @@ public class HsioService {
 
             List<Map<String, Object>> resD = hsioMapper.HSIO_130U_STR(dParams);
             if (resD != null && !resD.isEmpty()) {
-                Map<String, Object> rowD = lower(resD.getFirst());
+                Map<String, Object> rowD = convertMapToLowerCase(resD.getFirst());
                 if ("Y".equals(nvl(rowD.get("erryn")))) {
                     throw new Exception(nvl(rowD.get("msg"), "정산 연동 실패"));
                 }
@@ -584,14 +742,14 @@ public class HsioService {
             baseParams.put("actkind", "A0");
             List<Map<String, Object>> resA = hsioMapper.HSIO_131U_STR(baseParams);
             if (resA == null || resA.isEmpty()) throw new Exception("전표번호 채번 실패");
-            Map<String, Object> rowA = lower(resA.getFirst());
+            Map<String, Object> rowA = convertMapToLowerCase(resA.getFirst());
             String slipno = nvl(rowA.get("slipno"));
 
             baseParams.put("actkind", "U0");
             baseParams.put("slipno", slipno);
             List<Map<String, Object>> resU = hsioMapper.HSIO_131U_STR(baseParams);
             if (resU != null && !resU.isEmpty()) {
-                Map<String, Object> rowU = lower(resU.getFirst());
+                Map<String, Object> rowU = convertMapToLowerCase(resU.getFirst());
                 if ("00000000".equals(nvl(rowU.get("status")))) {
                     throw new Exception("정산 저장 실패: " + nvl(rowU.get("msg"), "업무 오류"));
                 }
@@ -639,7 +797,7 @@ public class HsioService {
 
             List<Map<String, Object>> res = hsioMapper.HSIO_140U_STR(hsioParams);
             if (res != null && !res.isEmpty()) {
-                Map<String, Object> row = lower(res.getFirst());
+                Map<String, Object> row = convertMapToLowerCase(res.getFirst());
                 if ("Y".equals(nvl(row.get("erryn")))) {
                     throw new Exception("전표[" + slipno + "] 취소 실패: " + nvl(row.get("msg")));
                 }
@@ -660,7 +818,7 @@ public class HsioService {
 
         String autoSlip = "N";
         List<Map<String, Object>> resSet = hsipMapper.HSIP_112U_STR(Map.of("cmpycd", cmpycd, "gbn", "P1"));
-        if (resSet != null && !resSet.isEmpty()) autoSlip = nvl(lower(resSet.getFirst()).get("slipyn"), "N");
+        if (resSet != null && !resSet.isEmpty()) autoSlip = nvl(convertMapToLowerCase(resSet.getFirst()).get("slipyn"), "N");
         String acctymd = "Y".equals(autoSlip) ? slipymd : "";
 
         Map<String, Object> mParams = createParamMap();
@@ -677,7 +835,7 @@ public class HsioService {
 
         List<Map<String, Object>> resMst = haslMapper.HASL_010U_STR(mParams);
         if (resMst == null || resMst.isEmpty()) throw new Exception("전표 마스터 생성 실패");
-        Map<String, Object> rowM = lower(resMst.getFirst());
+        Map<String, Object> rowM = convertMapToLowerCase(resMst.getFirst());
         String slipno = nvl(rowM.get("slipno"));
 
         for (Map<String, Object> item : items) {
@@ -702,7 +860,7 @@ public class HsioService {
 
             List<Map<String, Object>> resD = hsioMapper.HSIO_530U_STR(dParams);
             if (resD != null && !resD.isEmpty()) {
-                Map<String, Object> rowD = lower(resD.getFirst());
+                Map<String, Object> rowD = convertMapToLowerCase(resD.getFirst());
                 if ("Y".equals(nvl(rowD.get("erryn")))) {
                     throw new Exception(nvl(rowD.get("msg"), "정산 연동 실패"));
                 }
@@ -768,7 +926,7 @@ public class HsioService {
 
             List<Map<String, Object>> res = hsioMapper.HSIO_540U_STR(hsioParams);
             if (res != null && !res.isEmpty()) {
-                Map<String, Object> row = lower(res.getFirst());
+                Map<String, Object> row = convertMapToLowerCase(res.getFirst());
                 if ("Y".equals(nvl(row.get("erryn")))) {
                     throw new Exception("전표[" + slipno + "] 취소 실패: " + nvl(row.get("msg")));
                 }
@@ -805,7 +963,7 @@ public class HsioService {
 
         List<Map<String, Object>> resM = hsioMapper.HSIO_531U_STR(mParams);
         if (resM == null || resM.isEmpty()) throw new Exception("전표 마스터 발행 실패 (번호 채번 오류)");
-        Map<String, Object> rowM = lower(resM.getFirst());
+        Map<String, Object> rowM = convertMapToLowerCase(resM.getFirst());
         String slipno = nvl(rowM.get("slipno"));
 
         for (Map<String, Object> item : items) {
@@ -833,7 +991,7 @@ public class HsioService {
 
             List<Map<String, Object>> resD = hsioMapper.HSIO_531U_STR(dParams);
             if (resD != null && !resD.isEmpty()) {
-                Map<String, Object> rowD = lower(resD.getFirst());
+                Map<String, Object> rowD = convertMapToLowerCase(resD.getFirst());
                 if ("Y".equals(nvl(rowD.get("erryn")))) {
                     throw new Exception(nvl(rowD.get("msg"), "전표 상세 연동 실패"));
                 }
@@ -882,7 +1040,7 @@ public class HsioService {
 
             List<Map<String, Object>> res = hsioMapper.HSIO_541U_STR(hsioParams);
             if (res != null && !res.isEmpty()) {
-                Map<String, Object> row = lower(res.getFirst());
+                Map<String, Object> row = convertMapToLowerCase(res.getFirst());
                 if ("Y".equals(nvl(row.get("erryn")))) {
                     throw new Exception("전표[" + slipno + "] 취소 실패: " + nvl(row.get("msg")));
                 }
@@ -904,7 +1062,7 @@ public class HsioService {
 
         String autoSlip = "N";
         List<Map<String, Object>> resSet = ha00Mapper.HA00_010S_STR(Map.of("cmpycd", cmpycd, "gubun", "P1"));
-        if (resSet != null && !resSet.isEmpty()) autoSlip = nvl(lower(resSet.getFirst()).get("slipyn"), "N");
+        if (resSet != null && !resSet.isEmpty()) autoSlip = nvl(convertMapToLowerCase(resSet.getFirst()).get("slipyn"), "N");
         String acctymd = "Y".equals(autoSlip) ? slipymd : "";
 
         for (Map<String, Object> item : items) {
@@ -934,14 +1092,14 @@ public class HsioService {
             params.put("slipno", "");
             List<Map<String, Object>> resA = hsioMapper.HSIO_325U_STR(params);
             if (resA == null || resA.isEmpty()) throw new Exception("전표 번호 채번 실패");
-            Map<String, Object> rowA = lower(resA.getFirst());
+            Map<String, Object> rowA = convertMapToLowerCase(resA.getFirst());
             String slipno = nvl(rowA.get("slipno"));
 
             params.put("actkind", "U");
             params.put("slipno", slipno);
             List<Map<String, Object>> resU = hsioMapper.HSIO_325U_STR(params);
             if (resU != null && !resU.isEmpty()) {
-                Map<String, Object> rowU = lower(resU.getFirst());
+                Map<String, Object> rowU = convertMapToLowerCase(resU.getFirst());
                 if ("Y".equals(nvl(rowU.get("erryn")))) {
                     throw new Exception("정산 저장 실패: " + nvl(rowU.get("msg"), "업무 오류"));
                 }
@@ -971,7 +1129,7 @@ public class HsioService {
         String cmpycd = request.getCmpycd();
         String autoSlip = "N";
         List<Map<String, Object>> resSet = ha00Mapper.HA00_010S_STR(Map.of("cmpycd", cmpycd, "gubun", "P1"));
-        if (resSet != null && !resSet.isEmpty()) autoSlip = nvl(lower(resSet.getFirst()).get("slipyn"), "N");
+        if (resSet != null && !resSet.isEmpty()) autoSlip = nvl(convertMapToLowerCase(resSet.getFirst()).get("slipyn"), "N");
 
         for (Map<String, Object> item : request.getItems()) {
             String slipymd = nvl(item.get("slipymd")).replace("-", "");
@@ -1005,7 +1163,7 @@ public class HsioService {
 
             List<Map<String, Object>> res = hsioMapper.HSIO_325U_STR(hsioParams);
             if (res != null && !res.isEmpty()) {
-                Map<String, Object> row = lower(res.getFirst());
+                Map<String, Object> row = convertMapToLowerCase(res.getFirst());
                 if ("Y".equals(nvl(row.get("erryn")))) {
                     throw new Exception("전표[" + slipno + "] 취소 실패: " + nvl(row.get("msg")));
                 }
